32_kvs/grade.txt
Grading at Fri Jul 31 08:08:11 UTC 2020
Attempting to compile:
kv.c: In function ‘freeKVs’:
kv.c:59:25: error: request for member ‘key’ in something not a structure or union
       free(pairs -> arr -> key);
                         ^
The code did not compile!

Overall Grade: F
